--- a/Api/package.json
+++ b/Api/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "This is where all the node modules and JS code goes. This directory will run a server to make API calls.",
-  "main": "index.js",
+  "name": "Api",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "hapi": "^13.0.0"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
